fixed mobile card overflow

--- a/static/coding.css
+++ b/static/coding.css
@@ -31,7 +31,7 @@ h1{
     text-decoration: none;
     color: #38bdf8;
     width: 40%;
-    min-width: 350px;
+    min-width: 300px;
 }
 @media(max-width:768px){
     h1{
