--- a/static/design.css
+++ b/static/design.css
@@ -27,6 +27,7 @@ h1{
     text-decoration: none;
     color: #38bdf8;
     width: 40%;
+    min-width:300px;
 }
 .design-card:hover{
     transform: scale(1.03);
